[gd_scene load_steps=31 format=2]

[ext_resource path="res://src/entities/base_templates/base_npc/base_npc.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/components/bullet-related/bullet type/EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/components/bullet-related/BulletSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/entities/enemies/gunner/gunner_hand_shoulder_22x44.png" type="Texture" id=4]
[ext_resource path="res://assets/entities/enemies/gunner/gunner_sheet_128x128.png" type="Texture" id=5]
[ext_resource path="res://assets/entities/enemies/gunner/gunner_hand_cannon_22x44.png" type="Texture" id=6]
[ext_resource path="res://src/entities/new inherited enemies/EnemyGunner.gd" type="Script" id=7]
[ext_resource path="res://src/components/bullet-related/bullet_emitters/BulletEmitterSpread.gd" type="Script" id=8]
[ext_resource path="res://src/components/dust_spawner/DustSpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/entities/enemies/EnemyGunner/states/AttackGunner.gd" type="Script" id=10]
[ext_resource path="res://src/entities/enemies/EnemyGunner/states/ChaseGunner.gd" type="Script" id=11]
[ext_resource path="res://src/entities/enemies/GeneralStates/Death.gd" type="Script" id=12]
[ext_resource path="res://src/entities/new inherited enemies/IdleGunner.gd" type="Script" id=13]

[sub_resource type="CapsuleShape2D" id=19]
radius = 5.0
height = 64.0

[sub_resource type="VisualShaderNodeColorConstant" id=1]

[sub_resource type="VisualShaderNodeTexture" id=2]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=3]
operator = 6

[sub_resource type="VisualShaderNodeVectorOp" id=4]
operator = 2

[sub_resource type="VisualShaderNodeBooleanUniform" id=5]
uniform_name = "active"

[sub_resource type="VisualShader" id=6]
code = "shader_type canvas_item;
uniform bool active;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// BooleanUniform:9
	bool n_out9p0 = active;

// Color:11
	vec3 n_out11p0 = vec3(1.000000, 1.000000, 1.000000);
	float n_out11p1 = 1.000000;

// VectorOp:6
	vec3 n_out6p0 = vec3(n_out9p0 ? 1.0 : 0.0) * n_out11p0;

// VectorOp:5
	vec3 n_out5p0 = max(n_out3p0, n_out6p0);

// Output:0
	COLOR.rgb = n_out5p0;
	COLOR.a = n_out3p1;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1040, 60 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( 600, -40 )
nodes/fragment/5/node = SubResource( 3 )
nodes/fragment/5/position = Vector2( 860, -60 )
nodes/fragment/6/node = SubResource( 4 )
nodes/fragment/6/position = Vector2( 600, 100 )
nodes/fragment/9/node = SubResource( 5 )
nodes/fragment/9/position = Vector2( 400, 0 )
nodes/fragment/11/node = SubResource( 1 )
nodes/fragment/11/position = Vector2( 400, 120 )
nodes/fragment/connections = PoolIntArray( 3, 1, 0, 1, 3, 0, 5, 0, 6, 0, 5, 1, 5, 0, 0, 0, 9, 0, 6, 0, 11, 0, 6, 1 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/active = false

[sub_resource type="Resource" id=10]
resource_local_to_scene = true
script = ExtResource( 8 )
amount = 3
spread_angle = 5.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 45, 61 )

[sub_resource type="CircleShape2D" id=9]
radius = 300.0

[sub_resource type="Animation" id=13]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Death")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Death:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine/Death")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "delete_enemy"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Shoulder1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -35, -22 ), Vector2( -35, 19 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Shoulder2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, -22 ), Vector2( 35, 19 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Shoulder2/Cannon2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Death:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shoot:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Shoulder1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, -22 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Shoulder2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, -22 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite/Shoulder2/Cannon2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Run"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hit:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EnemyGunner" groups=["ENEMY"] instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 7 )
entity_name = "GUNNER"
entity_type = "ENEMY"

[node name="HealthManager" parent="Functions" index="0"]
max_health = 100.0

[node name="NavigationManager" parent="Functions" index="2"]
threshold = 32

[node name="PhysicsCollider" parent="." index="1"]
shape = SubResource( 19 )

[node name="Sprite" parent="Visuals" index="0"]
material = SubResource( 7 )
position = Vector2( 0, -64 )
texture = ExtResource( 5 )
hframes = 15
vframes = 3
frame = 30

[node name="GunHand" type="Node2D" parent="Visuals/Sprite" index="0"]
position = Vector2( -35, -22 )

[node name="Shoulder1" type="Sprite" parent="Visuals/Sprite/GunHand" index="0"]
texture = ExtResource( 4 )
offset = Vector2( 0, 17 )

[node name="Cannon" type="Node2D" parent="Visuals/Sprite/GunHand/Shoulder1" index="0"]
position = Vector2( 0, 34 )

[node name="Sprite" type="Sprite" parent="Visuals/Sprite/GunHand/Shoulder1/Cannon" index="0"]
rotation = -1.5708
texture = ExtResource( 6 )
offset = Vector2( 0, 17 )

[node name="BulletSpawner" parent="Visuals/Sprite/GunHand/Shoulder1/Cannon" index="1" instance=ExtResource( 3 )]
position = Vector2( 35, 0 )
bullet_scene = ExtResource( 2 )
shot_delay = 1.0
bullet_emitter = SubResource( 10 )

[node name="Shoulder2" type="Sprite" parent="Visuals/Sprite" index="1"]
modulate = Color( 0.498039, 0.498039, 0.498039, 1 )
show_behind_parent = true
position = Vector2( 35, -22 )
texture = ExtResource( 4 )
offset = Vector2( 0, 17 )

[node name="Cannon2" type="Sprite" parent="Visuals/Sprite/Shoulder2" index="0"]
show_behind_parent = true
position = Vector2( 0, 34 )
texture = ExtResource( 6 )
offset = Vector2( 0, 17 )

[node name="DustSpawner" parent="Visuals" index="1" instance=ExtResource( 9 )]

[node name="Areas" parent="." index="3"]
visible = false

[node name="Hurtbox" parent="Areas" index="0"]
visible = false
collision_layer = 128

[node name="HurtboxShape" parent="Areas/Hurtbox" index="0"]
position = Vector2( 1, -61 )
shape = SubResource( 8 )

[node name="AttackRange" parent="Areas" index="1"]
collision_mask = 2

[node name="AttackRangeShape" parent="Areas/AttackRange" index="0"]
position = Vector2( 0, -32 )
shape = SubResource( 9 )

[node name="Animations" type="AnimationPlayer" parent="AnimationMachine" index="0"]
root_node = NodePath("../..")
anims/Death = SubResource( 13 )
anims/Idle = SubResource( 14 )
anims/RESET = SubResource( 15 )
anims/Run = SubResource( 16 )

[node name="Hit" type="AnimationPlayer" parent="AnimationMachine" index="1"]
anims/Hit = SubResource( 17 )
anims/RESET = SubResource( 18 )

[node name="StateMachine" parent="." index="5"]
initial_state = NodePath("Chase")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 13 )

[node name="Chase" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 11 )

[node name="Attack" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 10 )

[node name="Death" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 12 )

[node name="HealthBar" parent="." index="7"]
position = Vector2( 0, -133 )
